FL-33296 [text-matching]: replace deprecated usages of matching methods
GitOrigin-RevId: 5480ff772ed794861fd7d81bc0f5fe81ea9465a5